--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -1,8 +1,7 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
 
-name: Node.js Package
-
+name: Tea_Simple
 on:
   release:
     types: [created]
@@ -33,4 +32,4 @@ jobs:
       - run: npm ci
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.Tea_simple_Auth_TOKEN}}
+          NODE_AUTH_TOKEN: ${{secrets.TEA_SIMPLE_AUTH_TOKEN}}
